# sol-svm-contracts

./: .dockerignore  .env  .prettierrc  Anchor.toml  Cargo.toml  README.md  devnet.json  docker-compose.localnet.yml  gastald.json  justfile  mainnet.json  package.json  staging.json
.assets/: btc.b.json  lbtc.json
app/: util.ts
dependencies/ccip/programs/ccip-common/: Cargo.toml
dependencies/ccip/programs/ccip-common/src/: context.rs  v1.rs
localnet/: Dockerfile  README.md  asset_router.json  bascule_gmp.json  consortium.json  id.json  lbtc_deploy.ts  mailbox.json  mailbox_receiver.json  ratio_oracle.json  start.sh  start_clean.sh  start_fork_devnet.sh
programs/asset_router/: Cargo.toml
programs/asset_router/src/: constants.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/asset_router/src/instructions/: admin.rs  change_auth.rs  change_native_mint.rs  deposit.rs  gmp_receive.rs  grant_account_role.rs  initialize.rs  mint_from_payload.rs  mint_with_fee.rs  mod.rs  pause.rs  redeem.rs  redeem_for_btc.rs  revoke_account_roles.rs  set_mint_fee.rs  set_token_config.rs  set_token_route.rs  set_treasury.rs  unset_token_route.rs
programs/asset_router/src/utils/: bitcoin_utils.rs  consortium_payloads.rs  ed25519.rs  fee.rs  gmp_messages.rs  mod.rs
programs/bascule/: Cargo.toml
programs/bascule/src/: errors.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/bascule/src/instructions/: admin.rs  deployer.rs  initialize.rs  pauser.rs  pending_admin.rs  reporter.rs  validator.rs
programs/bascule_gmp/: Cargo.toml
programs/bascule_gmp/src/: constants.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/bascule_gmp/src/instructions/: accept_ownership.rs  admin.rs  grant_account_role.rs  initialize.rs  mod.rs  pause.rs  report_mint.rs  revoke_account_roles.rs  update_validate_threshold.rs  validate_mint.rs
programs/bridge/: Cargo.toml
programs/bridge/src/: constants.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/bridge/src/instructions/: accept_ownership.rs  admin.rs  deposit.rs  gmp_receive.rs  grant_account_role.rs  initialize.rs  mod.rs  pause.rs  revoke_account_roles.rs  set_local_token_config.rs  set_rate_limit.rs  set_remote_bridge_config.rs  set_remote_token_config.rs  set_sender_config.rs  unset_local_token_config.rs  unset_remote_bridge_config.rs  unset_remote_token_config.rs  unset_sender_config.rs
programs/bridge/src/utils/: gmp_messages.rs  mod.rs  token_actions.rs
programs/consortium/: Cargo.toml
programs/consortium/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/consortium/src/instructions/: accept_ownership.rs  admin.rs  close_session_for_epoch.rs  create_session.rs  finalize_session.rs  initialize.rs  mod.rs  post_session_payload.rs  post_session_signatures.rs  set_initial_valset.rs  set_initial_valset_from_session.rs  update_valset.rs
programs/consortium/src/utils/: mod.rs  session_payloads.rs  signatures.rs
programs/lbtc/: Cargo.toml
programs/lbtc/src/: bitcoin_utils.rs  consortium.rs  constants.rs  decoder.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/lbtc/src/instructions/: accept_ownership.rs  admin.rs  burn.rs  change_auth.rs  create_metadata.rs  create_metadata_for_valset_payload.rs  create_mint_payload.rs  create_valset_payload.rs  initialize.rs  mint.rs  mint_from_payload.rs  mint_with_fee.rs  mod.rs  operator.rs  pause.rs  post_metadata_for_valset_payload.rs  post_mint_payload.rs  post_mint_signatures.rs  post_signatures_for_mint_payload.rs  post_signatures_for_valset_payload.rs  post_valset_signatures.rs  redeem.rs  set_initial_valset.rs  set_next_valset.rs  set_treasury.rs
programs/lbtc/src/utils/: actions.rs  bitcoin_utils.rs  decoder.rs  mod.rs  signatures.rs  solana_ed25519_verify.rs  validation.rs
programs/lombard_token_pool/: Cargo.toml
programs/lombard_token_pool/src/: constants.rs  context.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/lombard_token_pool/src/instructions/: accept_ownership.rs  admin.rs  append_remote_pool_addresses.rs  configure_allow_list.rs  delete_chain_config.rs  derive_accounts.rs  edit_configs.rs  initialize.rs  lock_or_burn_tokens.rs  mod.rs  release_or_mint_tokens.rs  remove_from_allow_list.rs  set_chain_rate_limit.rs  set_config.rs  set_rate_limit_admin.rs
programs/mailbox/: Cargo.toml
programs/mailbox/src/: constants.rs  errors.rs  events.rs  lib.rs  security.rs  state.rs
programs/mailbox/src/instructions/: accept_ownership.rs  admin.rs  deliver_message.rs  disable_inbound_message_path.rs  disable_outbound_message_path.rs  enable_inbound_message_path.rs  enable_outbound_message_path.rs  grant_account_role.rs  handle_message.rs  initialize.rs  mod.rs  pause.rs  revoke_account_roles.rs  send_message.rs  set_sender_config.rs  unset_sender_config.rs
programs/mailbox/src/utils/: cpi.rs  message_utils.rs  mod.rs
programs/mailbox_receiver/: Cargo.toml
programs/mailbox_receiver/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/mailbox_receiver/src/instructions/: gmp_receive.rs  initialize.rs  mod.rs
programs/mock_ccip_rmn/: Cargo.toml
programs/mock_ccip_rmn/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/mock_ccip_rmn/src/instructions/: initialize.rs  mod.rs  veify_not_cursed.rs
programs/ratio_oracle/: Cargo.toml
programs/ratio_oracle/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/ratio_oracle/src/instructions/: admin.rs  initialize.rs  initialize_oracle.rs  mod.rs  publish_ratio.rs  update_ratio_threshold.rs
programs/ratio_oracle/src/utils/: consortium_payloads.rs  mod.rs  ratio_threshold.rs
programs/registry/: Cargo.toml
programs/registry/src/: constants.rs  events.rs  lib.rs  security.rs
programs/registry/src/instructions/: mod.rs  post_message.rs
scripts/: README.md  acceptOwnership.ts  addPauser.ts  anchor-test-each.sh  changeMintAuth.ts  constants.ts  createMetadata.ts  createMintPayload.ts  createTokenMetadata.ts  createValsetPayload.ts  disableBascule.ts  disableWithdrawals.ts  enableBascule.ts  pause.ts  (+16 more)
(+119 files in other folders)
