[workspace]
members = [
    "programs/*",
    "dependencies/ccip/crates/*",
    "dependencies/ccip/programs/*"
]
resolver = "2"

[workspace.metadata.cli]
solana = "3.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
