[package]
name = "bascule"
version = "0.1.0"
description = "A Solana drawbridge that helps bridges mitigate hacks before they can be used to steal funds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bascule"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
primitive-types-solana = "0.1.0"

