[package]
name = "bridge"
version = "0.1.0"
description = "The bridge program that uses Mailbox for cross-chain communication"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
default = ["mainnet"]
mainnet = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
mailbox = { path = "../mailbox", features = ["cpi"] }
base-token-pool = { path = "../../dependencies/ccip/programs/base-token-pool", features = ["no-entrypoint"]}

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
