[package]
name = "consortium"
version = "0.1.0"
description = "The consortium program in charge of validating payloads from the Lombard Ledger notarization system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "consortium"

[features]
default = ["mainnet"]
mainnet = []
gastald = []
staging = []
bft = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = [ "init-if-needed" ] }
solana-security-txt = "1.1.1"

[dev-dependencies]
hex = "0.4.3"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
