[package]
name = "lbtc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lbtc"

[features]
default = ["devnet"]
mainnet = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
bascule = { path = "../bascule", features = ["cpi"] }
solana_ed25519_verify = { git = "https://github.com/lombard-finance/solana_ed25519_verify", branch = "update-deps" }
spl-token-2022 = { version = "8.0.0", features = ["no-entrypoint"] }
solana-program = "2.1.0"

[dev-dependencies]
hex = "0.4.3"
