[package]
name = "lbtc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lbtc"

[features]
default = ["mainnet"]
mainnet = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anyhow = "1"
arrayref = "0.3"
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bascule = { path = "../bascule", features = ["cpi"] }
curve25519-dalek = { version = "4.1.3" }
getrandom = { version = "0.1", features = ["dummy"] }
mpl-token-metadata = "5.1.0" 
sha2 = "0.10"
solana-zk-token-sdk = "=2.1.0"
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"

[dev-dependencies]
hex = "0.4.3"
solana-sdk = "2.1.0"
