[package]
name = "ratio_oracle"
version = "0.1.0"
description = "The ratio oracle program mirrors the staking ratio of a Lombard token handled on the Lombard Ledger"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ratio_oracle"

[features]
default = ["mainnet"]
mainnet = []
gastald = []
staging = []
bft = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
consortium = { path = "../consortium", features = ["cpi"] }
solana-security-txt = "1.1.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
