[package]
name = "registry"
version = "0.1.0"
description = "The registry program in charge of capturing message instrunctions from user providing proof of address ownership"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
default = ["mainnet"]
mainnet = []
devnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
