[package]
name = "ccip_common"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccip_common"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
# ccip-common is not to be deployed, so using the no-entrypoint feature
# prevents global allocator conflicts with its dependees.
default = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
ethnum = "1.5"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
